<resources>
    <string name="app_name">E-wallet</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_sign">Sign</string>
    <string name="create_account">Create an account</string>
    <string name="sign_in">Sign in</string>
    <string name="ewalle">eWalle</string>
    <string name="open">open</string>
    <string name="account_overview">Account Overview</string>
    <string name="current_balance">Current balance</string>
    <string name="send_money">Send Money</string>
    <string name="services">Services</string>
    <string name="send_money_str">Send\nMoney</string>
    <string name="receive_money">Receive\nMoney</string>
    <string name="mobile_prepaid">Mobile\nPrepaid</string>
    <string name="electricity_bill">Electricity\nBill</string>
    <string name="cashback_offer">Cashback\nOffer</string>
    <string name="movie_tickets">Movie\nTickets</string>
    <string name="flight_tickets">Flight\nTickets</string>
    <string name="more_options">More\nOptions</string>
    <string name="transactions">Transactions</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="accounts">Accounts</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="city">Seattle,Washington</string>
    <string name="selected_tab">selected tab</string>
    <string name="logout_icon">logout icon</string>
    <string name="name">Carol Black</string>
    <string name="logo">logo</string>
    <string name="menu">menu</string>
    <string name="add_balance">add_balance</string>
    <string name="amount">20,600</string>
    <string name="qr_icon">qr icon</string>
    <string name="add_person">add person</string>
    <string name="more_services">more services</string>
    <string name="money_icon">money icon</string>
    <string name="phone_icon">phone_icon</string>
    <string name="electricity_icon">electricity icon</string>
    <string name="cashback_icon">cashback_icon</string>
    <string name="movie_icon">movie icon</string>
    <string name="plane_icon">plane icon</string>
    <string name="options_icon">options icon</string>
    <string name="side_image">side image</string>
    <string name="weather_icon">weather icon</string>
    <string name="mock_temperature">34° C</string>
    <string name="avatar_background">avatar background</string>
    <string name="avatar">avatar</string>
</resources>