<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.fragments.SignFragment">

    <ImageView
        android:id="@+id/side_image"
        android:layout_width="160dp"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/side_image"
        android:scaleType="fitXY"
        android:src="@drawable/ic_side_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:format12Hour="hh:mm aa"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toTopOf="@+id/horizontal_header_guideline"
        tools:text="06:20 PM" />

    <ImageView
        android:id="@+id/weather_icon"
        android:layout_width="20dp"
        android:layout_height="14dp"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/ic_cloud"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintStart_toEndOf="@id/time"
        app:layout_constraintTop_toTopOf="@id/time" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/mock_temperature"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/weather_icon"
        app:layout_constraintStart_toEndOf="@id/weather_icon"
        app:layout_constraintTop_toTopOf="@id/weather_icon" />

    <TextClock
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:format12Hour="MMM.dd.yyyy|EEEE"
        android:textColor="@color/gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/time"
        tools:text="Nov.10.2020 | Wednesday" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_body_guideline" />

    <TextView
        android:id="@+id/project_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/ubuntu"
        android:text="@string/ewalle"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in"
        style="@style/roundedButtonStyle"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/orange"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_arrow_right_alt_24"
        app:iconGravity="textEnd"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="@id/right_vertical_guideline"
        app:layout_constraintStart_toStartOf="@id/left_vertical_guideline"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_footer_guideline" />

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/create_account"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/sign_in"
        app:layout_constraintStart_toStartOf="@+id/sign_in"
        app:layout_constraintTop_toBottomOf="@+id/sign_in" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="140dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_header_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_body_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="244dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_footer_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="540dp" />

</androidx.constraintlayout.widget.ConstraintLayout>