<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="104dp"
    android:background="@drawable/rounded_corners"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    app:cardBackgroundColor="@color/transparent">

    <ImageView
        android:id="@+id/avatar_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/ic_avatar_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/ic_avatar_3"
        app:layout_constraintBottom_toBottomOf="@+id/avatar_background"
        app:layout_constraintEnd_toEndOf="@+id/avatar_background"
        app:layout_constraintStart_toStartOf="@+id/avatar_background"
        app:layout_constraintTop_toTopOf="@+id/avatar_background" />

    <TextView
        android:id="@+id/person_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/avatar_background"
        app:layout_constraintTop_toTopOf="@id/avatar_background" />

    <TextView
        android:id="@+id/person_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/city"
        android:textColor="@color/gray"
        android:textSize="11sp"
        app:layout_constraintStart_toEndOf="@id/avatar_background"
        app:layout_constraintTop_toBottomOf="@id/person_name" />

</androidx.constraintlayout.widget.ConstraintLayout>